[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lexical/Alphabet/AlphabetLetter.gd" type="Script" id=1]
[ext_resource path="res://Light/spot.png" type="Texture" id=2]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[node name="AlphabetLetter" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.466667, 0.458824, 0.466667, 0.34902 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="thai" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -11.0
margin_right = 20.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ลม"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
